<resources>
    <string name="app_name">JetpackDemo</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">项目</string>
    <string name="title_notifications">体系</string>
    <string name="title_qa">问答</string>
    <string name="title_collect">我的</string>

    <string name="drawer_question">每日一问</string>
    <string name="drawer_collect">收藏</string>
    <string name="drawer_todo">TODO</string>
    <string name="drawer_about">关于APP</string>

    <string name="todo_title">标题输入</string>

    <string name="todo_content">内容输入......</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="trans_collect">trans_collect_aaa</string>
    <string name="trans_todo">trans_todo</string>
    <string name="trans_about">trans_about</string>
</resources>
