<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">


        <EditText
            android:id="@+id/todo_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/app_name"
            android:textColor="@color/text_black_500"
            android:hint="@string/todo_title" />

        <EditText
            android:id="@+id/todo_edit_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/todo_content"
            android:inputType="textMultiLine"
            android:textColor="@color/text_gray_700"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray_700"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_margin="12dp"
            app:formatTime="@{System.currentTimeMillis()}"/>


        <Button
            android:id="@+id/todo_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="submit"/>

    </LinearLayout>


</layout>
